# website-frontend-framework

./: .gitignore  404.html  Cargo.toml  Dioxus.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
public/: config.json  index.html  tailwind.css  tailwindout.css
public.static/: about.txt
src/: App.js  App.jsx  config.json  defaultBlogIndex.json  defaultBlogText.json  defaultBlogText2.json  defaultBlogText3.json  index.js  main.rs
src/component/: aboutme.rs  mod.rs  welcome.rs
src/component/aboutMe/: AboutMe.rs  mod.rs
src/component/aboutMeContent/: aboutme.rs  aboutmecontent.rs  experience.rs  habbit.rs  hobby.rs  mod.rs  musicArt.rs  quote.rs  skill.rs
src/component/aboutme/: AboutMe.css  AboutMe.js
src/component/article/: article.rs
src/component/articleList/: articlelist.rs  articles.rs  keywords.rs  mod.rs  recommend.rs  tags.rs  test.json
src/component/articles/: articles.rs
src/component/blog/: Blog.css  Blog.js
src/component/calendar/: calendar.rs  mod.rs  table.rs  timeTable.rs
src/component/footer/: footer.rs
src/component/gallary/: Gallary.css  Gallary.js
src/component/header/: header.rs
src/component/homepage/: about_me.rs  articles.rs  icons.rs  mod.rs  navigation.rs  single_welcome.rs
src/component/introduce/: Introduce.css  Introduce.js  Introduce.jsx  Introduce.module.scss
src/component/loading/: mod.rs
src/component/navBar/: NavBar.css  NavBar.js
src/component/navigation/: mod.rs  navigation.rs
src/component/outlook1/: Outlook1.jsx  Outlook1.module.scss  default.json
src/component/outlook2/: Outlook2.jsx  Outlook2.module.scss
src/component/outlook3/: Outlook3.jsx  Outlook3.module.scss
src/component/outlook4/: Outlook4.jsx  Outlook4.module.scss
src/css/: font_ali.css  keyframe.css  tailwind.css  tailwindout.css  test.css
src/defaultConfig/: aboutMe.json  article.json  calendar.json  commonPage.json
src/layout/: Footer.css  Footer.js  Header.css  Header.js  MainContent.js  MainContent.jsx
src/model/: AboutMe.rs  Article.rs  Calendar.rs  config.rs  mod.rs
src/style/: index.css  index.scss  libiary.scss
src/utils/: cache.rs  effect.rs  encryptedUtils.rs  mod.rs  netUtils.rs  resourceType.rs  utils.js  wireLaneWithSvg.rs  wordCloud.rs
(+24 files in other folders)
