[package]
name = "website-frontend-framework"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
dioxus-router = "0.4.1"
gloo = {version = "0.11.0",features = ["futures"]}
web-sys = {version = "0.3.64",features = ["DomTokenList"]}
charming = { version = "0.2.3", features = ["wasm"] }
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
aes-wasm = "0.1.6"
lazy_static = "1.4.0"
futures = "0.3.28"
