[package]
name = "website-frontend-framework"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = {version =  "0.5.0",features = ["web","router"] }
manganis = "0.2.2"
log = "0.4.21"
dioxus-logger = "0.5.0"
console_error_panic_hook = "0.1.7"
gloo = {version = "0.11.0",features = ["futures"]}
web-sys = {version = "0.3.69", features = ["DomTokenList", "ScrollToOptions", "ScrollBehavior", "CssStyleDeclaration"] }
charming = { version = "0.3.1", features = ["wasm"] }
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
aes-wasm = "0.1.6"
lazy_static = "1.4.0"
futures = "0.3.28"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.37"
